<resources>
    <string name="app_name">Exercise_6</string>
    <string name="user_registration">User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="remove_user">Remove User</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="delete">Delete</string>
    <string name="enter_user_email">Enter user email</string>
    <string name="active_users">Active Users:</string>
    <string name="deleted_users">Deleted users:</string>




</resources>