<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvActiveUsers"
                android:layout_weight="1"
                android:text="@string/active_users"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDeletedUsers"
                android:layout_weight="1"
                android:text="@string/deleted_users"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:background="@drawable/input_style"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="@integer/material_motion_duration_medium_1"
                android:inputType="text"
                android:hint="@string/first_name"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="@integer/material_motion_duration_medium_1"
                android:inputType="text"
                android:hint="@string/last_name"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="@integer/material_motion_duration_medium_1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="@integer/material_motion_duration_medium_1"
                android:inputType="number"
                android:hint="@string/age"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddUser"
            android:layout_marginTop="40dp"
            android:text="@string/add_user"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:background="@drawable/btn_style"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateUser"
            android:layout_marginTop="10dp"
            android:text="@string/update_user"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:background="@drawable/btn_style"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRemoveUser"
            android:layout_marginTop="30dp"
            android:text="@string/remove_user"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:background="@drawable/btn_delete_style"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/deleteUserContainer"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDeleteUser"
                android:hint="@string/enter_user_email"
                android:paddingStart="15dp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:inputType="textEmailAddress"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteUser"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:letterSpacing="0.02"
                android:background="@color/error"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>


        </androidx.appcompat.widget.LinearLayoutCompat>






</androidx.appcompat.widget.LinearLayoutCompat>